Whats new???

Oct 4, 2021 : version 0.11 released!
  - new : added timelapse option
  - new : added broadcasting option

Apr 21, 2020 : version 0.10 released!
  - fix : support resolution not multiple of 4
  - new : add trim 3 seconds at end

Mar 18, 2020 : version 0.9 released!
  - fix : win64 loader now loads msvcrt dlls properly

Mar 10, 2020 : version 0.8 released!
  - re-release msi with updated libraries

Jun 16, 2015 : version 0.4 released!
  - added new higher video bit rates