@@ -13,7 +13,7 @@ import javaforce.media.*;
 
 public class RecordDesktopApp extends javax.swing.JFrame {
 
-  private String version = "0.11";
+  private String version = "0.12";
 
   /**
    * Creates new form RecordCameraApp
